--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.233);
+  border-radius: 25px;
+  background: #3f8e90;
+  padding: 20px;
 }
 
 .row {
